# mcmanage

./: .gitignore  Cargo.toml  README.md
src/: configuration.rs  downloader.rs  lib.rs  main.rs  server_runner.rs  versions.rs
src/webui/: auth.rs  commands.rs  dash.rs  mod.rs  new.rs  routes.rs  state.rs  toggle_enabled.rs
webui/: login.html  signup.html
webui/templates/: commands.html  dash.html  new_server.html
